--- a/FinPlan.Web/Components/Layout/NavMenu.razor
+++ b/FinPlan.Web/Components/Layout/NavMenu.razor
@@ -56,8 +56,8 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="living-cost" title="Enter cost of living for now and retirement">
-                <span class="bi bi-list-ul" aria-hidden="true"></span> Cost Breakdown
+            <NavLink class="nav-link" href="living-cost" title="Cost of living projections">
+                <span class="bi bi-list-ul" aria-hidden="true"></span> Cost of Living
             </NavLink>
         </div>
 
