--- a/FinPlan.Web/Components/Pages/CostBreakdown.razor
+++ b/FinPlan.Web/Components/Pages/CostBreakdown.razor
@@ -13,8 +13,8 @@
 <EditForm Model="this">
     <div class="mb-3 d-flex align-items-end justify-content-between">
         <div class="d-flex align-items-center">
-            <div class="row g-2 align-items-center">
-                <div class="col-auto">
+            <div class="row g-2 align-items-center"></div>
+                <div class="col-auto"></div>
                     <label class="form-label">Years to retirement</label>
                     <InputNumber class="form-control form-control-sm" @bind-Value="YearsToRetirement" />
                 </div>
@@ -49,7 +49,7 @@
                     <button class="btn btn-sm btn-secondary" @onclick="ResetToDefaults">Load Standard Defaults</button>
                 </div>
             </div> *@
-        </div>
+        @* </div> *@
 
         <div class="text-end">
             <div class="mb-1 small">Years to retirement / Inflation</div>
@@ -61,7 +61,7 @@
                 <button class="btn btn-sm btn-outline-secondary" @onclick="LoadFromApi">Load</button>
             </div>
         </div>
-    </div>
+    @* </div> *@
 
     <table class="table table-sm">
         <thead>
